--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1338,13 +1338,14 @@ h6 {
 /* 박스 글씨 */
 #productcompare-box {
   font-family: "Nunito", sans-serif;
-  font-size: 24px;
+  font-size: 15px;
   font-weight: bold;
+  margin-top: 100px;
 }
 /* 박스 레이아웃 */
 .product-box {
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   background-color: white;
   border: 2px solid blueviolet;
   margin-bottom: 10px;
@@ -1470,3 +1471,15 @@ tr:nth-child(1) {
 /* {
   margin-left: 400px;
 } */
+
+
+ /* Increase the modal width */
+ .modal-dialog {
+     max-width: 80%;
+ }
+
+ /* Increase the modal height */
+ .modal-content {
+     height: 80vh; /* 80% of the viewport height */
+ }
+
